Added my own things.

--- a/3-layer-app/templates/mysql-secret.yaml
+++ b/3-layer-app/templates/mysql-secret.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
-metadata: 
+metadata:
   name: mysql-secret
 type: Opaque
 data:
-  MYSQL_ROOT_PASSWORD: cGFzc3dvcmQ=
+  MYSQL_ROOT_PASSWORD: cGFzczEyMw==
   MYSQL_DATABASE: dGFza21hbmFnZXI=
